--- a/gleam.toml
+++ b/gleam.toml
@@ -17,6 +17,7 @@ target = "javascript"
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
 lustre = ">= 4.3.1 and < 5.0.0"
 lustre_ui = ">= 0.6.0 and < 1.0.0"
+gleam_json = ">= 1.0.1 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
